[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "headpack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "textual>=0.70",
    "Pillow>=10.0",
    "rich-pixels",
]

[project.scripts]
headpack = "headpack.cli:main"
hpk = "headpack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["headpack*"]
